# caboose

./: .caboose.toml.example  .gitignore  Cargo.toml  Procfile  README.md  test-rails-logs.sh
.github/workflows/: release-macos.yml  release-musl.yml  release-windows.yml  release.yml
scripts/: run_demo.sh
src/: environment.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/database/: mod.rs
src/exception/: mod.rs
src/explain/: mod.rs
src/frontend/: mod.rs
src/git/: mod.rs
src/metrics/: mod.rs
src/parser/: mod.rs
src/process/: mod.rs
src/query/: mod.rs
src/rails/: mod.rs
src/stats/: mod.rs
src/test/: mod.rs
src/ui/: formatting.rs  icon_manager.rs  mod.rs  mod.rs.backup  theme.rs  themes.rs
src/ui/command/: autocomplete.rs  commands.rs  history.rs  mod.rs  parser.rs  registry.rs
src/ui/components/: command_palette.rs  footer.rs  header.rs  mod.rs  scroll_indicator.rs
src/ui/views/: database_health_view.rs  exception_detail_view.rs  exceptions_view.rs  logs_view.rs  mod.rs  query_analysis_view.rs  request_detail_view.rs  test_results_view.rs
src/ui/widgets/: gauge.rs  mod.rs  sparkline.rs  spinner.rs  visual_bar.rs
tests/: cli_tests.rs  config_tests.rs  context_tests.rs  database_tests.rs  exception_tests.rs  explain_tests.rs  frontend_tests.rs  git_tests.rs  parser_tests.rs  process_tests.rs  query_tests.rs  rails_tests.rs  stats_tests.rs  test_tracker_tests.rs
