[package]
name = "caboose"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.29.0"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2.0"
sysinfo = "0.30"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
